--- a/depth_module/package.xml
+++ b/depth_module/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="jaime@todo.todo">jaime</maintainer>
+  <maintainer email="robotica@todo.todo">robotica</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
