--- a/depthimage_to_laserscan_2/depthimage_to_laserscan_2/package.xml
+++ b/depthimage_to_laserscan_2/depthimage_to_laserscan_2/package.xml
@@ -1,14 +1,14 @@
 <package>
   <name>depthimage_to_laserscan_2</name>
   <version>1.0.7</version>
-  <description>depthimage_to_laserscan_2</description>
+  <description>depthimage_to_laserscan</description>
   <maintainer email="chadrockey@gmail.com">Chad Rockey</maintainer>
 
   <license>BSD</license>
 
-  <url type="website">http://ros.org/wiki/depthimage_to_laserscan_2</url>
-  <url type="bugtracker">https://github.com/ros-perception/depthimage_to_laserscan_2/issues</url>
-  <url type="repository">https://github.com/ros-perception/depthimage_to_laserscan_2</url>
+  <url type="website">http://ros.org/wiki/depthimage_to_laserscan</url>
+  <url type="bugtracker">https://github.com/ros-perception/depthimage_to_laserscan/issues</url>
+  <url type="repository">https://github.com/ros-perception/depthimage_to_laserscan</url>
 
   <author>Chad Rockey</author>
 
