--- a/depthimage_to_laserscan_2/depthimage_to_laserscan_2/CMakeLists.txt
+++ b/depthimage_to_laserscan_2/depthimage_to_laserscan_2/CMakeLists.txt
@@ -21,14 +21,14 @@ add_library(DepthImageToLaserScan src/DepthImageToLaserScan.cpp)
 target_link_libraries(DepthImageToLaserScan ${catkin_LIBRARIES})
 
 add_library(DepthImageToLaserScanROS src/DepthImageToLaserScanROS.cpp)
-add_dependencies(DepthImageToLaserScanROS ${PROJECT_NAME}_gencfg)
+add_dependencies(DepthImageToLaserScanROS depthimage_to_laserscan_gencfg)
 target_link_libraries(DepthImageToLaserScanROS DepthImageToLaserScan ${catkin_LIBRARIES})
 
 add_library(DepthImageToLaserScanNodelet src/DepthImageToLaserScanNodelet.cpp)
 target_link_libraries(DepthImageToLaserScanNodelet DepthImageToLaserScanROS ${catkin_LIBRARIES})
 
-add_executable(depthimage_to_laserscan_2 src/depthimage_to_laserscan.cpp)
-target_link_libraries(depthimage_to_laserscan_2 DepthImageToLaserScanROS ${catkin_LIBRARIES})
+add_executable(depthimage_to_laserscan src/depthimage_to_laserscan.cpp)
+target_link_libraries(depthimage_to_laserscan DepthImageToLaserScanROS ${catkin_LIBRARIES})
 
 if(CATKIN_ENABLE_TESTING)
   # Test the library
@@ -40,12 +40,12 @@ endif()
 add_executable(test_dtl EXCLUDE_FROM_ALL test/depthimage_to_laserscan_rostest.cpp)
 
 # Install targets
-install(TARGETS DepthImageToLaserScan DepthImageToLaserScanROS DepthImageToLaserScanNodelet depthimage_to_laserscan_2
+install(TARGETS DepthImageToLaserScan DepthImageToLaserScanROS DepthImageToLaserScanNodelet depthimage_to_laserscan
 	RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
 
-install(DIRECTORY include/${PROJECT_NAME}/
+install(DIRECTORY include/depthimage_to_laserscan/
         DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
 )
 install(FILES nodelets.xml
