--- a/depthimage_to_laserscan_2/depthimage_to_laserscan_2/cfg/Depth.cfg
+++ b/depthimage_to_laserscan_2/depthimage_to_laserscan_2/cfg/Depth.cfg
@@ -1,6 +1,6 @@
 #! /usr/bin/env python
 
-PACKAGE='depthimage_to_laserscan_2'
+PACKAGE='depthimage_to_laserscan'
 
 from dynamic_reconfigure.parameter_generator_catkin import *
 
@@ -11,12 +11,12 @@ gen = ParameterGenerator()
 gen.add("scan_height",          int_t,    0,                                "Height of the laser band (in pixels).",                            1,      1,   500)
 gen.add("scan_frame_id",        str_t,    0,                                "The frame_id, to which max_scan_height and min_scan height refer",     "base_footprint")
 gen.add("camerasensor_frame_id",str_t,    0,                                "The frame_id of the camerasensor",     "camera_depth_optical_frame")
-gen.add("max_scan_height",      double_t,     0,  "The maximum height of the measured points that are considered in the laser scan. The height refers to the scan_frame_id.", 0.08, 0, 5.0)
+gen.add("max_scan_height",      double_t,     0,  "The maximum height of the measured points that are considered in the laser scan. The height refers to the scan_frame_id.", 0.6, 0, 5.0)
 gen.add("min_scan_height",      double_t,     0,  "The minimum height of the measured points that are considered in the laser scan. The height refers to the scan_frame_id.", 0.06)
 gen.add("scan_time",            double_t, 0,                                "Time for the entire scan sweep.",                                  0.033,  0.0, 1.0)
 gen.add("range_min",            double_t, 0,                                "Minimum reported range (in meters).",                              0.45,   0.0, 5.0)
-gen.add("range_max",            double_t, 0,                                "Maximum reported range (in meters).",                              5.0,   0.0, 10.0)#For simulations use 5.0 as max
+gen.add("range_max",            double_t, 0,                                "Maximum reported range (in meters).",                              10.0,   0.0, 10.0)#For simulations use 5.0 as max
 gen.add("vertical_cluster_size",int_t,    0,                                "Number of image lines that are grouped together for performance optimization.",   20,   1, 1000)
-gen.add("output_frame_id",      str_t,    0,                                "Output frame_id for the laserscan.",   "laser")
+gen.add("output_frame_id",      str_t,    0,                                "Output frame_id for the laserscan.",   "camera_depth_frame")
 
-exit(gen.generate(PACKAGE, "depthimage_to_laserscan_2", "Depth"))
+exit(gen.generate(PACKAGE, "depthimage_to_laserscan", "Depth"))
