--- a/depthimage_to_laserscan_2/cfg/Depth.cfg
+++ b/depthimage_to_laserscan_2/cfg/Depth.cfg
@@ -17,6 +17,6 @@ gen.add("scan_time",            double_t, 0,                                "Tim
 gen.add("range_min",            double_t, 0,                                "Minimum reported range (in meters).",                              0.45,   0.0, 5.0)
 gen.add("range_max",            double_t, 0,                                "Maximum reported range (in meters).",                              10.0,   0.0, 10.0)#For simulations use 5.0 as max
 gen.add("vertical_cluster_size",int_t,    0,                                "Number of image lines that are grouped together for performance optimization.",   20,   1, 1000)
-gen.add("output_frame_id",      str_t,    0,                                "Output frame_id for the laserscan.",   "camera_depth_frame")
+gen.add("output_frame_id",      str_t,    0,                                "Output frame_id for the laserscan.",   "laser_frame")
 
 exit(gen.generate(PACKAGE, "depthimage_to_laserscan", "Depth"))
