--- a/inpainting/CMakeLists.txt
+++ b/inpainting/CMakeLists.txt
@@ -8,11 +8,15 @@ project(inpainting)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
+  cv_bridge
+  image_transport
   roscpp
-  rospy
+  sensor_msgs
   std_msgs
+  message_filters
 )
 
+find_package(OpenCV 3.2 REQUIRED)
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
 
@@ -70,7 +74,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   std_msgs
+#   sensor_msgs#   std_msgs
 # )
 
 ################################################
@@ -103,11 +107,14 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES inpainting
-#  CATKIN_DEPENDS roscpp rospy std_msgs
-#  DEPENDS system_lib
+  INCLUDE_DIRS
+  CATKIN_DEPENDS  roscpp
+                  sensor_msgs
+                  std_msgs
+                  cv_bridge
+                  image_transport
 )
+
 
 ###########
 ## Build ##
@@ -116,13 +123,13 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
   ${catkin_INCLUDE_DIRS}
+  ${OpenCV_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
-#   src/${PROJECT_NAME}/inpainting.cpp
+#   src/${PROJECT_NAME}/inpaint16bit.cpp
 # )
 
 ## Add cmake target dependencies of the library
@@ -133,7 +140,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/inpainting_node.cpp)
+# add_executable(${PROJECT_NAME}_node src/inpaint16bit_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -197,10 +204,13 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_inpainting.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_inpaint16bit.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
 
 ## Add folders to be run by python nosetests
 # catkin_add_nosetests(test)
+
+add_executable(depth_inpainter src/depth_inpainter.cpp)
+target_link_libraries(depth_inpainter ${catkin_LIBRARIES} ${OpenCV_LIBS})
